--- a/accounts/templates/accounts/editemployeeprofile.html
+++ b/accounts/templates/accounts/editemployeeprofile.html
@@ -45,6 +45,7 @@
                        
                         
                         <div class="form-group text-right">
+                            <a href="{% url 'employee' %}" class="btn btn-secondary">Back</a>
                             <input type="submit" value="Update Profile" id="" class="btn btn-primary">
                         </div>
 
