--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -22,58 +22,33 @@
 
 
 
-      <footer class="mainfooter" role="contentinfo">
-        <div class="footer-middle">
-        <div class="container">
-          <div class="row">
-          <div class="col-md-3 col-sm-6 ">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Navigate</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Events</a></li>
-                  <li><a href="#">Our Team</a></li>
-                  <li><a href="#">Suggestions</a></li>
-                  <li><a href="#">Report Abuse</a></li>
-                  <li>
-                    <a href="#"></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            
-            <div class="col-md-3 col-sm-6">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>About</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a>Support Us</li>
-                  <li><a href="#">Payment Center</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a href="#">News and Updates</a></li>
-                  <li><a href="#">FAQs</a></li>
-                </ul>
-              </div>
-            </div>
-              <div class="col-md-3 ml-auto">
-                  <h4>Follow Us</h4>
-                  <ul class="social-network social-circle">
-                   <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                   <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                  </ul>				
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-md-12 copy">
-                  <p class="text-center">&copy; Copyright 2018 - Company Name.  All rights reserved.</p>
-              </div>
-          </div>
-      
-      
-        </div>
-        </div>
-      </footer>
+
+
+  <footer class="text-center text-lg-start" style="background-color: #db6930;margin-top:200px;">
+    <div class="container d-flex justify-content-center py-5">
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-facebook-f"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-youtube"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-instagram"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-twitter"></i>
+      </button>
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white">Hashone</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
+
         
         
 </body>      
