--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -21,21 +21,31 @@
 
     {% endblock %}
 
+  <footer class="text-center text-lg-start" style="background-color: #db6930;margin-top:200px;">
+    <div class="container d-flex justify-content-center py-5">
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-facebook-f"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-youtube"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-instagram"></i>
+      </button>
+      <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" >
+        <i class="fab fa-twitter"></i>
+      </button>
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white">Hashone</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 
 
-      <footer class="mainfooter" role="contentinfo">
-        <div class="footer-middle">
-        <div class="container">
-          <div class="row">
-              <div class="col-md-12 copy">
-                  <p class="text-center">&copy; Copyright 2018 - Company Name.  All rights reserved.</p>
-              </div>
-          </div>
-        </div>
-        </div>
-      </footer>
-        
-        
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
