--- a/accounts/templates/accounts/editcompanyprofile.html
+++ b/accounts/templates/accounts/editcompanyprofile.html
@@ -41,6 +41,7 @@
                        
                         
                         <div class="form-group text-right">
+                            <a href="{% url 'company' %}" class="btn btn-secondary">Back</a>
                             <input type="submit" value="Update Profile" id="" class="btn btn-primary">
                         </div>
 
