--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -15,11 +15,15 @@
 
           {% if request.user.is_company %}
 
+              <li class="nav-item ">
+                <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Notifications <div class="badge badge-danger">10</div>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                
                   {% for item in unknown %}
                     {% if item.company.user == request.user %}
                     <div class="card">
@@ -35,10 +39,10 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'companydashboard' %}">Employees</a>
+                <a class="nav-link" href="{% url 'companydashboard' request.user.id %}">Employees</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'company' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'company' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -54,7 +58,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -69,7 +73,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -87,7 +91,7 @@
               <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
             </li>
             <li class="nav-item active">
               <span><a class="nav-link" href="#"> Welcome </a></span>
