--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -39,10 +39,10 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'companydashboard' request.user.company.id %}">Employees</a>
+                <a class="nav-link" href="{% url 'companydashboard' request.user.id %}">Employees</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'company' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'company' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -73,7 +73,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
               </li>
               <li class="nav-item active">
                 <span><a class="nav-link" href="#"> Hello, {{request.user}}</a></span>
@@ -91,7 +91,7 @@
               <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'employee' %}">Profile Settings</a>
+                <a class="nav-link" href="{% url 'employee' %}">Profile</a>
             </li>
             <li class="nav-item active">
               <span><a class="nav-link" href="#"> Welcome </a></span>
