--- a/home/templates/home/employeeprofile.html
+++ b/home/templates/home/employeeprofile.html
@@ -49,7 +49,7 @@
     
                         <div class="companies-list">
                             <h2> {{item.user.username}} </h2>
-                            <p>{{item.description}} </p>
+                            <p>{{item.description|slice:":50"}} </p>
                             <a href="{% url 'openreview' item.id %}" class="btn btn-primary">Open Review</a>
                             <a href="{% url 'unknownreview' item.id %}" class="btn btn-warning">Unknown Review</a>
                                 
