--- a/home/templates/home/openreview.html
+++ b/home/templates/home/openreview.html
@@ -18,7 +18,7 @@
                 <div class="company-details ">
                     <h1>{{company.user.username}}</h1>
                     <p>{{company.user.email}}</p>
-                    <p>{{company.description}}</p>
+                    <p>{{company.description|slice:":50"}}</p>
                 </div>
                 </div>    
         
